--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,5 +29,9 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
+#jwt配置
+jwt:
+  secret:  dev-secret-key-that-is-at-least-32-bytes-long-123456  # 密钥（建议复杂且保密）
+  expire: 7200000
 
 
